--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
 
   # Utilities
   intl: ^0.20.2
+  flutter_dotenv: ^5.1.0
   package_info_plus: ^8.2.0
   flutter_contacts: ^1.1.9+2
   flutter_local_notifications: ^17.2.3
